default java version to 8; removed default maxPermSize/maxTestPermSize; updated license plugin to 0.11.0