@@ -59,9 +59,6 @@ class ProjectDefaultsPlugin implements Plugin<Project> {
 	private void setCompileMemorySettings(BaseForkOptions forkOptions) {
 		forkOptions.memoryInitialSize = forkOptions.memoryInitialSize ?: defaultsProperties.minHeapSize
 		forkOptions.memoryMaximumSize = forkOptions.memoryMaximumSize ?: defaultsProperties.maxHeapSize
-		if (isMissingJvmArg(forkOptions, "-XX:MaxPermSize")) {
-			forkOptions.jvmArgs << "-XX:MaxPermSize=${defaultsProperties.maxPermSize}".toString()
-		}
 	}
 
 	private boolean isMissingJvmArg(def jvmArgContainer, String jvmArg) {
@@ -72,9 +69,6 @@ class ProjectDefaultsPlugin implements Plugin<Project> {
 		project.tasks.withType(Test) { Test test ->
 			test.minHeapSize = test.minHeapSize ?: defaultsProperties.minTestHeapSize
 			test.maxHeapSize = test.maxHeapSize ?: defaultsProperties.maxTestHeapSize
-			if (isMissingJvmArg(test, "-XX:MaxPermSize")) {
-				test.jvmArgs("-XX:MaxPermSize=${defaultsProperties.maxTestPermSize}".toString())
-			}
 		}
 	}
 
